# iot

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package.json
frontend/src/: App.vue
src/iot/: __init__.py  app.py
tests/: conftest.py  test_api.py  test_version.py
